--- a/style.css
+++ b/style.css
@@ -1,22 +1,122 @@
 body {  
-    font-family: Helvetica, Arial, Century;
-    font-size: 12px;
-    margin: 0;
+	font-family:Helvetica, Arial, Century;
+	background: url('images/bluebg.jpg');
+	background-repeat:repeat-x;
+	background-position:top;
+	margin-top:90px;
+}
+
+
+#header {
+	background-color:#ff9900;
+	height:40px;
+}
+
+
+#header ul {
+		margin:0 auto;
+		width:800px;
+		padding:12px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+	}
+	
+#header ul li {
+  display:inline;	
+  font-size: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+  line-height: 10px;
+  color: white;
+}
+
+#header ul li a.logo {
+	background: url("images/logo.png");
+    background-repeat:no-repeat;
+    background-size: contain;
+    height:140px;
+	display:block;
+	width:80px;
+	margin-top:-60px;
+}
+
+
+
+
+html {
+  background-color: #9900cc;
+  font-family: sans-serif;
+}
+
+body {
+  margin-top: 60px;
+}
+.profile-card {
+  background-color: #eae9ec;
+  color: #050506;
+  padding: 15vmin 20vmin;
+  text-align: center;
+  background: linear-gradient(45deg, #eae9ec calc(100% - 300px), #fff calc(100% - 300px), #fff calc(100% - 296px), #ff9900 calc(100% - 296px));
+}
+
+.profile-card {padding-bottom: 25vmin;}
+
+.profile-card__title {
+  font-family: 'Teko';
+  font-weight: 300;
+  font-style: normal;
+  text-decoration: none;
+  letter-spacing: 0.04em;
+  line-height: 1;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 60px;
+}
+.profile-card__subtitle {
+  margin: 0;
+  color: #615e6e;
+  font-size: 18px;
+  margin-bottom: 96px;
+}
+.profile-card__subtitle::before {content: '@';}
+.profile-card__avatar {
+  display: inline-block;
+  margin: 0;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  width: 100px;
+  height: 100px;
+}
+.profile-projects h2 {
+  display: none;
+}
+.cards {
+  padding: 0 20px;
+  list-style: none;
+  max-width: 1200px;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+  grid-gap: 20px;
+}
+  .cards {
+    margin-top: -60px;
   }
-  
-  #header {
-    background-color: #ffd727;
-    height: 50px;
-    position: relative;
-    margin: 60px auto 0;
-  }
-  
-  .logo {
-    position: absolute;
-    left: 50%;
-    margin: -48px 0 0 -108px;
-  }
-  
-  @media screen and (max-width: 800px) {
-  }
-    
+
+.card {
+  display: flex;
+  flex-direction: column;
+  color: inherit;
+  background-color: #fff;
+  color: #1d1c21;
+  text-decoration: none;
+  padding: 20px;
+  height: 8em;
+  box-shadow: 0 2px 4px rgba(29,28,33,0.2);
+}
+.card:hover {
+  background-color: #eae9ec;
+}
+
+
