--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
-body {  
+ body {  
 	font-family:Helvetica, Arial, Century;
 	background: url('images/bluebg.jpg');
 	background-repeat:repeat-x;
 	background-position:top;
 	margin-top:90px;
+}
+
+@font-face{
+  font-family:myfirstfont;
+  src: url(fonts/Champagne_Limousines.ttf);
 }
 
 
@@ -15,7 +20,7 @@ body {
 
 #header ul {
 		margin:0 auto;
-		width:800px;
+		width: 800px;
 		padding:12px;
     display: flex;
     justify-content: center;
@@ -23,7 +28,8 @@ body {
 	}
 	
 #header ul li {
-  display:inline;	
+  display:inline;
+  font-family:myfirstfont;	
   font-size: 40px;
   padding-left: 10px;
   padding-right: 10px;
@@ -41,27 +47,18 @@ body {
 	margin-top:-60px;
 }
 
+/*** Profile code ***/
 
-
-
-html {
-  background-color: #9900cc;
-  font-family: sans-serif;
-}
-
-body {
-  margin-top: 60px;
-}
+html {background-color: #9900cc;}
+body {margin-top: 60px;}
 .profile-card {
   background-color: #eae9ec;
   color: #050506;
   padding: 15vmin 20vmin;
   text-align: center;
-  background: linear-gradient(45deg, #eae9ec calc(100% - 300px), #fff calc(100% - 300px), #fff calc(100% - 296px), #ff9900 calc(100% - 296px));
 }
 
 .profile-card {padding-bottom: 25vmin;}
-
 .profile-card__title {
   font-family: 'Teko';
   font-weight: 300;
@@ -79,7 +76,7 @@ body {
   font-size: 18px;
   margin-bottom: 96px;
 }
-.profile-card__subtitle::before {content: '@';}
+
 .profile-card__avatar {
   display: inline-block;
   margin: 0;
@@ -88,9 +85,11 @@ body {
   width: 100px;
   height: 100px;
 }
-.profile-projects h2 {
-  display: none;
+.profile-projects ol{
+  width: 1000px;
+
 }
+
 .cards {
   padding: 0 20px;
   list-style: none;
@@ -99,10 +98,8 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
   grid-gap: 20px;
+  margin-top: -60px;
 }
-  .cards {
-    margin-top: -60px;
-  }
 
 .card {
   display: flex;
@@ -115,8 +112,6 @@ body {
   height: 8em;
   box-shadow: 0 2px 4px rgba(29,28,33,0.2);
 }
-.card:hover {
-  background-color: #eae9ec;
-}
+.card:hover {background-color: #eae9ec;}
 
 
